<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="209dp"
        android:layout_height="52dp"
        android:layout_marginBottom="36dp"
        android:text="@string/result"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inpt1"
        android:layout_width="300dp"
        android:layout_height="51dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/num1"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/inpt2"
        android:layout_width="294dp"
        android:layout_height="52dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/num2"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inpt1"
        tools:ignore="TextContrastCheck" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="359dp"
        android:layout_height="193dp"
        android:layout_marginBottom="72dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rba"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/rb1" />

        <RadioButton
            android:id="@+id/rbs"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/rb2" />

        <RadioButton
            android:id="@+id/rbm"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/rb3" />

        <RadioButton
            android:id="@+id/rbd"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/rb4"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <Button
        android:id="@+id/button2"
        android:layout_width="338dp"
        android:layout_height="48dp"
        android:layout_marginBottom="36dp"
        android:onClick="operate"
        android:text="@string/btn"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/sw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/sw2"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.919"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inpt2"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>